[package]
name = "cantan"
version = "0.1.0"
authors = ["Luapix <luapixel@gmail.com>"]
edition = "2018"

[dependencies]
cantan_derive = { path = "./cantan_derive" }
fnv = "1.0.7"
num-traits = "0.2.12"
once_cell = "1.4.1"
ordered-float = "2.0.0"
peg = "0.6.3"
rand = "0.8.0"
rustyline = "6.2.0"
unicode-segmentation = "1.6.0"
unicode-xid = "0.2.1"
